# surf

./: .gitignore  README.md  pyproject.toml
notebooks/: [1].ipynb  [2].ipynb  [3].ipynb  [4].ipynb  [5].ipynb  [6].ipynb
notes/: agents.md  competitors.md  data & benchmarks.md  experiments.md  goal.md  jepa.md  steps.md
notes/archive/: experiments.md
runners/: [10].py  [1].py  [2].py  [3].py  [4].py  [6].py  [7].py  [8].py  [9].py
src/core/: jepa.py  model.py  spatial_jepa.py
src/datasets/: cropharvest.py  dataset.py  eurocropsml.py  ssl4eo.py
src/evals/: evaluation.py
src/temp/: verify_9.py
src/tests/: test_dataset.py  test_evaluation.py  test_runner_10.py  test_runner_8.py  test_runner_9.py  test_spatial_jepa.py  test_ssl4eo.py  test_verify_9.py
src/utils/: io_utils.py
