[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surf-agri"
version = "0.1.0"
description = "Multimodal agricultural EO data pipeline for SSL pretraining"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "xarray>=2024.3.0",
  "rioxarray>=0.15.0",
  "rasterio>=1.3.9",
  "zarr>=2.17.0,<3",
  "numcodecs>=0.13.0",
  "scipy>=1.12.0",
  "torch>=2.3.0,<2.6.0",
  "tqdm>=4.66.0",
  "h5py>=3.11.0",
  "rioxarray>=0.15.0",
  "scikit-learn>=1.4.0",
  "huggingface-hub>=0.23.0",
  "fsspec>=2024.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]
